Removed C3P0
Seems to be a problem with the wildly setting